k8s/petclinic-deployment.yaml
# 3. DEPLOYMENT: El motor principal (Rolling updates, Probes, Limits)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  labels:
    app: petclinic
spec:
  replicas: 2 # Iniciamos con el mínimo que pide tu HPA
  selector:
    matchLabels:
      app: petclinic
  # ROLLING UPDATE STRATEGY
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1       # Crea máximo 1 pod extra durante la actualización
      maxUnavailable: 0 # Nunca te quedas con menos pods de los deseados
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic-app
          # Reemplazarás esto con la URL real de tu ECR más adelante
          image: tu-cuenta.dkr.ecr.us-east-1.amazonaws.com/spring-petclinic-repo-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # CONFIGMAP Y SECRETS INYECTADOS
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          # READINESS & LIVENESS PROBES (Usando Spring Boot Actuator)
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
