k8s/external-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: devops-lab
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana
  namespace: devops-lab
subsets:
- addresses:
  - ip: 129.159.70.134
  ports:
  - name: http
    port: 3000
