k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: LoadBalancer
