k8s/grafana-root-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-root-redirect
  namespace: devops-lab
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/temporal-redirect: https://guytho1996-petclinic.eastus2.cloudapp.azure.com/grafana/dashboards
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - guytho1996-petclinic.eastus2.cloudapp.azure.com
    secretName: petclinic-frontend-tls
  rules:
  - host: guytho1996-petclinic.eastus2.cloudapp.azure.com
    http:
      paths:
      - path: /grafana/?$
        pathType: ImplementationSpecific
        backend:
          service:
            name: external-grafana-service
            port:
              number: 3000
