k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: devops-lab
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - petclinic.local
    secretName: petclinic-frontend-tls
  rules:
  - host: petclinic.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-frontend
            port:
              number: 80
